--- a/XMUA/XMUA.csproj
+++ b/XMUA/XMUA.csproj
@@ -71,7 +71,9 @@
     <Content Include="css\font-awesome\css\font-awesome.css" />
     <Content Include="css\font-awesome\css\font-awesome.min.css" />
     <Content Include="css\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="css\StyleAdmin.css" />
     <Content Include="css\StyleStudent.css" />
+    <Content Include="css\StyleTeacher.css" />
     <Content Include="Global.asax" />
     <Content Include="img\bgimg.jpg" />
     <Content Include="img\logo.png" />
