--- a/XMUA/Web.config
+++ b/XMUA/Web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
+  <connectionStrings>
+    <add name="XMUAConnectionString" connectionString="Data Source=DESKTOP-AD15ROA\SQLEXPRESS;Initial Catalog=XMUA;Persist Security Info=True;User ID=xmum;Password=123456"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
