--- a/XMUA/XMUA.csproj
+++ b/XMUA/XMUA.csproj
@@ -75,6 +75,8 @@
     <Content Include="css\StyleStudent.css" />
     <Content Include="css\StyleTeacher.css" />
     <Content Include="Global.asax" />
+    <Content Include="img\bg1.png" />
+    <Content Include="img\bg2.png" />
     <Content Include="img\bgimg.jpg" />
     <Content Include="img\logo.png" />
     <Content Include="img\smile.png" />
@@ -228,6 +230,13 @@
     <Compile Include="Student\TimeTable.aspx.designer.cs">
       <DependentUpon>TimeTable.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Student\Welcome.Master.cs">
+      <DependentUpon>Welcome.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Student\Welcome.Master.designer.cs">
+      <DependentUpon>Welcome.Master</DependentUpon>
+    </Compile>
     <Compile Include="Teacher\Teacher.Master.cs">
       <DependentUpon>Teacher.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -280,6 +289,7 @@
     <Content Include="Admin\Admin.Master" />
     <None Include="packages.config" />
     <Content Include="Student\Student.Master" />
+    <Content Include="Student\Welcome.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
